<resources>
    <string name="app_name">ROSTOPIC ECHO</string>

    <string name="action_settings">Settings</string>
    <string name="button_connect">Connect To Master</string>
    <string name="button_echo">Echo</string>
    <string name="button_list">List</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="edit_message">Choose A Topic ex. "chatter"</string>
</resources>
