<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <Button
        android:id="@+id/master_button"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:text="@string/button_connect"
        android:onClick="connectToMaster"/>
    <EditText android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:hint="@string/edit_message" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/echo_button"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/button_echo"
            android:onClick="topicEcho"/>
        <Button
            android:id="@+id/list_button"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/button_list"
            android:onClick="topicList"/>
        <Button
            android:id="@+id/pause_button"
            android:layout_width="110sp"
            android:layout_height="50sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/button_pause"
            android:onClick="topicPause"/>
    </LinearLayout>
    <com.michaeldysart.RosTopicEcho.Reader
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:scrollbars = "vertical"/>
</LinearLayout>
